--- a/static/css/common.css
+++ b/static/css/common.css
@@ -33,14 +33,23 @@ body{
 }
 
 .first_choice{
+    background-color: #fff;
     border: 2px solid rgb(255, 184, 219);
     border-radius: 15px;
-    box-shadow: 1px 1px 10px 5px rgb(255, 184, 219); /* x-position, y-position, blur, spread, color */ 
+    box-shadow: 1px 1px 10px 5px rgb(255, 184, 219); /* x-position, y-position, blur, spread, color */
+    font-family: 'HSYuji-Regular';
+    font-size: 25px;
+    text-indent: 100px;
+    text-align: left;
 }
 
 /************ span **************/
 .title_text{
     color: #46AAEB;
+}
+
+.space{
+    padding: 0px 30px;
 }
 
 /************ button **************/
@@ -52,6 +61,7 @@ body{
     height: 70px;
     font-family: 'HSYuji-Regular';
     font-size: 25px;
+    cursor: pointer;
 }
 
 /************ img **************/
