--- a/templates/first_choice.html
+++ b/templates/first_choice.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나와 가장 잘 어울리는 League of Legend 챔피언은?</title>
-
-    <link rel="stylesheet" href="../static/css/common.css"> <!-- 스타일 적용 -->
-    <link rel="stylesheet" href="../static/css/font.css"> <!-- 폰트 적용 -->
-</head>
-<body>
-    <!-- 컨테이너 -->
-    <div class="container">
-        <!-- 내용 -->
-        <div class="content">
-            <div class="first_choice">
-                <p>1. 나는 누군가를 죽이고(...) 싶다.</p>
-            </div>
+{% extends "main.html" %}
+{% block content %}
+    <!-- 내용 -->
+    <div class="content">
+        <div class="first_choice">
+            <p>1. <span class="space"></span>나는 누군가를 죽이고(...) 싶다.</p>
         </div>
     </div>
-
-    <script src="../static/js/common.js"></script>
-</body>
-</html>
+{% endblock %}
