add title (first.html)

--- a/templates/first.html
+++ b/templates/first.html
@@ -2,6 +2,12 @@
 {% block content %}
 <!-- 컨테이너 -->
 <div class="container">
+
+    <!-- 제목 -->
+    <div class="title">
+        <p>나의 성향에 맞는 것을 골라주세요~</p>
+    </div>
+
     <!-- 내용 -->
     <div class="content">
         <div class="choice first_choice mg40 pointer" onclick="loading(1);">
